# TinyWiiBackupManager

./: +  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  TinyWiiBackupManager.icns  build-macos.sh  build.rs  cargo-config.toml  cliff.toml  flake.nix  justfile  macos-linker.sh  tauri.conf.json  titles.txt  titles_to_map.py
.cargo/: config-x86_64-v3.toml  config.toml
.github/.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.yml  feat.yml
.github/workflows/: release.yml  winget.yml
assets/: Info.plist  TinyWiiBackupManager.desktop  appdmg-arm64.json  appdmg-compat.json  appdmg-x86_64.json  appdmg.json  confirm.vbs  dmg-icon.icns  downloads-template.md  gamehacking-ids.txt  it.mq1.TinyWiiBackupManager.desktop  it.mq1.TinyWiiBackupManager.metainfo.xml  it.mq1.TinyWiiBackupManager.yml.metainfo.xml  manifest-win7.rc  manifest.rc  scoop-template.json  scrape-gamehacking-ids.sh  titles.txt  wiitdb.rnc  wiitdb.txt
assets/Windows-msix/: AppxManifest.xml
assets/gamehacking/: GameHacking.org - WII - Page 0.html  GameHacking.org - WII - Page 1.html  GameHacking.org - WII - Page 10.html  GameHacking.org - WII - Page 11.html  GameHacking.org - WII - Page 12.html  GameHacking.org - WII - Page 13.html  GameHacking.org - WII - Page 16.html  GameHacking.org - WII - Page 18.html  GameHacking.org - WII - Page 20.html  GameHacking.org - WII - Page 22.html  GameHacking.org - WII - Page 24.html  GameHacking.org - WII - Page 25.html  GameHacking.org - WII - Page 26.html  GameHacking.org - WII - Page 27.html  GameHacking.org - WII - Page 29.html  GameHacking.org - WII - Page 3.html  GameHacking.org - WII - Page 30.html  GameHacking.org - WII - Page 32.html  GameHacking.org - WII - Page 35.html  GameHacking.org - WII - Page 37.html  GameHacking.org - WII - Page 42.html  GameHacking.org - WII - Page 43.html  GameHacking.org - WII - Page 45.html  GameHacking.org - WII - Page 46.html  GameHacking.org - WII - Page 47.html  GameHacking.org - WII - Page 48.html  GameHacking.org - WII - Page 50.html  GameHacking.org - WII - Page 51.html  GameHacking.org - WII - Page 53.html  GameHacking.org - WII - Page 54.html  GameHacking.org - WII - Page 55.html  GameHacking.org - WII - Page 56.html  GameHacking.org - WII - Page 61.html  GameHacking.org - WII - Page 66.html  GameHacking.org - WII - Page 68.html  GameHacking.org | WII | Page 14.html  GameHacking.org | WII | Page 15.html  GameHacking.org | WII | Page 17.html  GameHacking.org | WII | Page 19.html  GameHacking.org | WII | Page 2.html  (+31 more)
assets/macos/: tiny-wii-backup-manager.icns
assets/windows-msix/: AppxManifest.xml
assets/xp-dialogs/: alert.vbs  confirm.vbs
bucket/: TinyWiiBackupManager.json
containers/: Dockerfile  Dockerfile.ARM64  Dockerfile.X64  Dockerfile.aarch64  Dockerfile.arm64  Dockerfile.armhf  Dockerfile.i686  Dockerfile.x86  Dockerfile.x86_64
crates/core/: Cargo.toml  build.rs
crates/core/src/: archive.rs  checksum.rs  config.rs  convert.rs  covers.rs  disc_info.rs  drive_info.rs  game.rs  game_id.rs  homebrew_app.rs  http.rs  id_map.rs  lib.rs  osc.rs  scrub.rs  util.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: config.rs  convert.rs  covers.rs  data_dir.rs  dialogs.rs  disc_info.rs  drive_info.rs  extensions.rs  game.rs  games.rs  homebrew_apps.rs  logic.rs  main.rs  notification.rs  osc.rs  scrub.rs  standard_conversion.rs  util.rs  xp_dialogs.rs
package/linux/: AppRun  Dockerfile  TinyWiiBackupManager.desktop  it.mq1.TinyWiiBackupManager.desktop  it.mq1.TinyWiiBackupManager.metainfo.xml
package/macos/: Info.plist  TinyWiiBackupManager.icns  appdmg-arm64.json  appdmg-universal.json  appdmg-x86_64.json
package/windows/: TinyWiiBackupManager.exe.manifest  scoop-template.json
scripts/: build-linux-arm64.sh  build-linux-armhf.sh  build-linux-x86.sh  build-linux-x86_64-v2.sh  build-linux-x86_64-v3.sh  build-linux-x86_64.sh  build-linux.sh  build-macos-arm64.sh  build-macos-x86_64.sh  build-macos.sh  build-windows-arm64.ps1  build-windows-legacy-x86.ps1  build-windows-legacy-x86_64.ps1  build-windows-x86.ps1  build-windows-x86_64-v2.ps1  build-windows-x86_64-v3.ps1  build-windows-x86_64.ps1  build-windows.ps1  bundle.py  clean.sh  generate-release-notes.sh  make-icons.sh  package-linux-appimage.sh  package-linux-tarball.sh  package-linux.sh  package-macos.sh  package-windows.ps1  print-changes.py  print-scoop-manifest.py  update-scoop-bucket.sh  update-winget.py  update-winget.sh  zip-macos-app.sh
src/: accent.rs  add_games.rs  app.rs  archive.rs  banners.rs  base_dir.rs  checksum.rs  concurrency.rs  config.rs  conv_queue.rs  convert.rs  cover_manager.rs  covers.rs  data_dir.rs  dialogs.rs  dir_layout.rs  dirs.rs  disc_info.rs  disc_util.rs  double_reader.rs  drive_info.rs  error_handling.rs  extensions.rs  fmtlayer.rs  fonts.rs  fs.rs  game.rs  game_id.rs  game_list.rs  games.rs  hbc.rs  hbc_app.rs  hbc_app_list.rs  hbc_apps.rs  homebrew_app.rs  homebrew_app_list.rs  homebrew_app_meta.rs  http.rs  http_util.rs  id_map.rs  (+44 more)
src/appimage_utils/: dev_readme.txt
src/components/: app.rs  bottom_panel.rs  game_checks.rs  (+13 more)
ui/: about-page.slint  about_page.slint  app-window.slint  app_window.slint  common.slint  confirm-conversion-page.slint  delete-dir-page.slint  developers.slint  disc_info.slint  game-grid-page.slint  game-page.slint  game-table-page.slint  game_card.slint  game_grid.slint  game_info.slint  game_list.slint  games-page.slint  games.slint  games_page.slint  hbc-apps-grid-page.slint  hbc_app_card.slint  hbc_app_grid.slint  hbc_app_info.slint  hbc_app_list.slint  hbc_apps.slint  homebrew-apps-grid-page.slint  homebrew-apps-table-page.slint  logic.slint  main.slint  message-page.slint  message_page.slint  mirrored-properties.slint  navbar.slint  osc-grid-page.slint  osc-table-page.slint  osc_app_grid.slint  osc_app_list.slint  osc_apps.slint  oscwii_app_card.slint  oscwii_app_grid.slint  (+16 more)
wbfs_file_2.9/: platform.h  splits.h  tools.c  tools.h  wbfs.c
wbfs_file_2.9_64bit/: Makefile  disc_usage_table.c  negentig.c  scrub.c  splits.c  tools.c  tools.h  wbfs.c
(+229 files in other folders)
