[package]
name = "TinyWiiBackupManager"
version = "6.0.0"
rust-version = "1.94"
edition = "2024"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "GPL-3.0-only"
repository = "https://github.com/mq1/TinyWiiBackupManager"
homepage = "https://github.com/mq1/TinyWiiBackupManager/wiki"
description = "A tiny game backup and homebrew app manager for the Wii"

[package.metadata.winresource]
OriginalFilename = "TinyWiiBackupManager.exe"
LegalCopyright = "Copyright © 2026 Manuel Quarneti. Licensed under GPL-3.0-only."

[dependencies]

# My crates (MIT or Apache-2.0)
which-fs = "0.2"
split-write = "0.2"
wii-disc-info = "0.4"
wiiload = "0.3"

slint = { git = "https://github.com/slint-ui/slint.git", rev = "57b2004", default-features = false, features = [
  "accessibility",
  "backend-winit",
  "compat-1-2",
  "renderer-femtovg",
  "renderer-software",
  "std",
  "serde",
  "raw-window-handle-06",
] }
raw-window-handle = "0.6"
nod = { git = "https://github.com/mq1/nod.git" }
anyhow = "1.0"
open = "5.3"
directories = "6.0"
serde = "1.0"
serde_json = "1.0"
rfd = "0.17"
fuzzy-matcher = "0.3"
postcard = "1.1"
zstd = { version = "0.13", optional = true }
fs_extra = "1.3"
fs4 = { version = "0.13", default-features = false }
hex = "0.4"
zip = { version = "8.5", default-features = false, features = [
  "deflate-flate2",
] }
sanitize-filename = "0.7.0-beta"
num_cpus = "1.17"
bitflags = "2.11"
walkdir = "2.5"
crc32fast = "1.5"
minreq = "2.14"

[target.'cfg(target_vendor = "pc")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Dwm"] }
dark-light = "2.0"

[target.'cfg(target_vendor = "win7")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Shell_Common",
  "Win32_System_Com",
] }


[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "57b2004" }
lucide-slint = "1.7"
winresource = "0.1"
regex = "1.12"
zstd = { version = "0.13", optional = true }
postcard = { version = "1.1", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }


[features]
default = ["compress-idmap", "https-native"]
compress-idmap = ["dep:zstd"]
https-native = ["minreq/https-native"]
https-rustls = ["minreq/https-rustls"]
https-rustls-probe = ["minreq/https-rustls-probe"]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.zstd]
opt-level = 3
[profile.release.package.zstd-safe]
opt-level = 3
[profile.release.package.zstd-sys]
opt-level = 3

# speed up slint compiler in dev builds
[profile.dev.build-override]
opt-level = 2

# speed up conversions in dev builds
[profile.dev.package."*"]
opt-level = 2

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
missing-errors-doc = { level = "allow", priority = 1 }
missing-panics-doc = { level = "allow", priority = 1 }
