[package]
name = "TinyWiiBackupManager"
version = "6.0.0"
rust-version = "1.94"
edition = "2024"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "GPL-3.0-only"
repository = "https://github.com/mq1/TinyWiiBackupManager"
homepage = "https://github.com/mq1/TinyWiiBackupManager/wiki"
description = "A tiny game backup and homebrew app manager for the Wii"

[package.metadata.winresource]
OriginalFilename = "TinyWiiBackupManager.exe"
LegalCopyright = "Copyright © 2026 Manuel Quarneti. Licensed under GPL-3.0-only."

[dependencies]

# My crates (MIT OR Apache-2.0)
which-fs = "0.2"
split-write = "0.2"
wii-disc-info = "0.4"
wiiload = "0.3"

slint = { git = "https://github.com/slint-ui/slint.git", branch = "pre-release/1.16", default-features = false, features = [
  "accessibility",
  "backend-winit",
  "compat-1-2",
  "renderer-femtovg",
  "renderer-software",
  "std",
  "serde",
  "raw-window-handle-06",
] }
nod = { git = "https://github.com/encounter/nod.git" }
anyhow = "1.0"
open = "5.3"
directories = "6.0"
serde = "1.0"
serde_json = "1.0"
rfd = "0.17"
fuzzy-matcher = "0.3"
fs_extra = "1.3"
fs4 = { version = "0.13", default-features = false }
hex = "0.4"
zip = { version = "8.5", default-features = false, features = [
  "deflate-flate2",
] }
sanitize-filename = "0.7.0-beta"
num_cpus = "1.17"
walkdir = "2.5"
crc32fast = "1.5"
minreq = "2.14"
quick-xml = { version = "0.39", features = ["serialize"] }
image = { version = "0.25", default-features = false, features = ["png"] }
time = "0.3"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.62", features = [
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Shell_Common",
  "Win32_System_Com",
] }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", branch = "pre-release/1.16" }
lucide-slint = "1.8"
winresource = "0.1"


[features]
default = ["https-system"]
https-system = ["minreq/https-native"]
https-bundled = ["minreq/https-rustls-probe"]
rust-analyzer = []


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# speed up slint compiler in dev builds
[profile.dev.build-override]
opt-level = 2

# speed up conversions in dev builds
[profile.dev.package."*"]
opt-level = 2

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
missing-errors-doc = { level = "allow", priority = 1 }
missing-panics-doc = { level = "allow", priority = 1 }
