[package]
name = "twbm-gui"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[package.metadata.winresource]
OriginalFilename = "TinyWiiBackupManager.exe"
LegalCopyright = "Copyright © 2026 Manuel Quarneti. Licensed under GPL-3.0-only."

[dependencies]
twbm-core = { path = "../core" }
slint = { version = "1.16", features = ["raw-window-handle-06"] }
anyhow = { workspace = true }
open = "5.3"
directories = "6.0"
rfd = "0.17"
walkdir = "2.5"
time = "0.3"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.62", features = [
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls_Dialogs",
  "Win32_UI_Shell_Common",
  "Win32_System_Com",
] }

[build-dependencies]
slint-build = "1.16"
lucide-slint = "1.8"
winresource = "0.1"

[features]
default = []
native-tls = []
rustls = []
rust-analyzer = []
